<resources>
    <string name="app_name">Eways</string>
    <string name="hello">Eways Android</string>
    <string name="percent">%s%%</string>
    <string name="rialstring">%s ریال</string>
    <string name="date_format">%d %s</string>
    <string name="changes_dialog_title">تغییرات اخیر</string>
    <string name="bottomnav_tab1_title">باشگاه</string>
    <string name="bottomnav_tab2_title">سفر</string>
    <string name="bottomnav_tab3_title">شارژ و اینترنت</string>
    <string name="bottomnav_tab4_title">قبض</string>
    <string name="bottomnav_tab5_title">فروشگاه</string>
    <string name="bottomnav_tab6_title">خانه</string>
    <string name="login_sign_up_text">ثبت نام</string>
    <string name="login_do_not_have_account">حساب کاربری ندارید؟</string>
    <string name="login_password_hint">رمز عبور</string>
    <string name="login_username_hint">نام کاربری</string>
    <string name="login_button_text">ورود</string>
    <string name="login_otp_title">کد تایید ارسال شده به شماره موبایل:</string>
    <string name="login_otp_sub_title_text1">کد 8 رقمی ارسال شده به شماره </string>
    <string name="login_otp_sub_title_text2">را در زیر وارد کنید:</string>
    <string name="login_otp_error_text">رمز وارد شده صحیح نیست!</string>
    <string name="login_otp_timer_title">ارسال مجدد کد</string>
    <string name="login_otp_password_error">رمز عبور وارد شده صحیح نیست!</string>
    <string name="login_otp_or">یا</string>
    <string name="login_otp_password_input_hint_text">رمز عبور</string>
    <string name="login_phone_number_input_hint_text">شماره تلفن خود را وارد نمایید</string>
    <string name="login_phone_number_button_text">ارسال کد تایید</string>
    <string name="login_phone_number_error">شماره موبایل وارد شده صحیح نمی باشد!</string>
    <string name="otp_sms_resource_phonenumber">98200064004</string>
    <string name="otp_sms_resource_phonenumber2">+98200064004</string>
    <string name="login_failed_message">خطایی رخ داده است</string>
    <string name="login_remember_me_text">مرا به خاطر بسپار</string>
    <string name="login_forget_password_text">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="login_reset_password_text">رمز عبور خود را فراموش کرده ام</string>
    <string name="login_recovery_password_text">بازیابی رمز عبور</string>
    <string name="login_confirm_button_text">ثبت</string>
    <string name="login_confirm_button_text2">تایید</string>
    <string name="login_verification_code_hint">کد فعال سازی پیامک ‌شده را وارد نمایید</string>
    <string name="login_reset_password_first_input_hint">رمز جدید</string>
    <string name="login_reset_password_second_input_hint">تکرار رمز جدید</string>
    <string name="login_verification_code_recend">ارسال مجدد کد فعال سازی</string>
    <string name="reset_password_confirm_not_match">تکرار رمز جدید با رمز جدید همخوانی ندارد</string>
    <string name="shop_item_quick_buy_text">خرید سریع</string>
    <string name="store_page_title">فروشگاه</string>
    <string name="store_page_category_title">دسته‌بندی‌ها</string>
    <string name="store_page_search_title">جستجو</string>
    <string name="inventory_not_exist_dialog_confirm_button_text">تایید</string>
    <string name="inventory_not_exist_dialog_description">شما به این کالا دسترسی ندارید</string>
    <string name="categoryitem_seeall_text">همه</string>
    <string name="category_title_all">همه موارد</string>
    <string name="category_title_main_page">صفحه اصلی</string>
    <string name="storefilter_title_sortby">مرتب‌سازی</string>
    <string name="storefilter_subtitle_sortby">پرفروش‌ترین، ارزانترین …</string>
    <string name="storefilter_title_filter">فیلتر</string>
    <string name="storefilter_subtitle_filter">قیمت، برند، دسته‌بندی</string>
    <string name="storefilter_title_changeview">تغییر نمایش</string>
    <string name="five_hundred_thousand">500 هزار</string>
    <string name="one_million">1 میلیون</string>
    <string name="one_hundred_thousand">100 هزار</string>
    <string name="one_thousand">1 هزار</string>
    <string name="fifty_million">50 میلیون</string>
    <string name="ten_million">10 میلیون</string>
    <string name="upper">به بالا</string>
    <string name="loyaltyscore_title">امتیاز وفاداری کل</string>
    <string name="productdetail_guaranteecontainer_guarantee_title">گارانتی:</string>
    <string name="productdetail_guaranteecontainer_seller_title">فروشنده:</string>
    <string name="productdetail_title_fragment">جزییات محصول</string>
    <string name="productdetail_notfound_error">برای این محصول جزییات وجود ندارد</string>
    <string name="counterview_error_maxcount">تعداد انتخاب شده نمی تواند از %s بیشتر باشد</string>
    <string name="filter_toolbar_cancel_all_text">لغو همه فیلترها</string>
    <string name="filter_toolbar_title">فیلترها</string>
    <string name="filter_header_search_hint">جستجو در نتایج</string>
    <string name="filter_header_title_availability_text">نمایش کالا:</string>
    <string name="filter_header_title_availability_option1">همه کالاها</string>
    <string name="filter_header_title_availability_option2">کالاهای موجود</string>
    <string name="filter_header_title_cost">قیمت</string>
    <string name="filter_header_title_cost_currency">(ریال): </string>
    <string name="filter_header_cost_item_higher"> به بالا  </string>
    <string name="filter_sort_dialog_title">مرتب سازی بر اساس : </string>
    <string name="filter_sort_item_selling">پرفروش‌ترین</string>
    <string name="filter_sort_item_price">ارزان‌ترین</string>
    <string name="filter_sort_item_time">جدیدترین</string>
    <string name="filter_sort_item_most_seen">پربازدیدترین</string>
    <string name="filter_sort_item_most_expensive">گران‌ترین</string>
    <string name="filter_button_text">اعمال فیلتر</string>
    <string name="fragment_club_title">باشگاه</string>
    <string name="club_item_buy_error_text">امتیاز شما کافی نیست!</string>
    <string name="club_item_unavailable_error_text">ناموجود</string>
    <string name="club_item_buy_text">خرید</string>
    <string name="club_item_price_suffix">ریال</string>
    <string name="club_item_point_text">امتیاز:</string>
    <string name="shop_cart_item_remove_text">حذف کالا</string>
    <string name="shop_cart_item_count_text">تعداد:</string>
    <string name="shop_cart_item_final_price_text">مبلغ قابل پرداخت:</string>
    <string name="shop_cart_item_final_price_suffix_text">ریال</string>
    <string name="shop_cart_item_minOrder_message">امکان انتخاب کمتر وجود ندارد.</string>
    <string name="shop_cart_item_max_order_message">امکان انتخاب بیشتر وجود ندارد.</string>
    <string name="shop_cart_item_unit_price_text">قیمت واحد:</string>
    <string name="shop_cart_item_stock_error_text">موجودی این کالا از تعداد درخواستی کمتر می باشد</string>
    <string name="shop_cart_item_unit_price_suffix_text">ریال</string>
    <string name="shop_cart_item_total_price_text">قیمت کل:</string>
    <string name="shop_cart_item_total_price_suffix_text">ریال</string>
    <string name="shop_cart_item_discount_text">تخفیف:</string>
    <string name="shop_cart_item_discount_suffix_text">ریال</string>
    <string name="shop_cart_item_point_text">امتیاز:</string>
    <string name="shop_cart_item_point_suffix_text">ریال</string>
    <string name="order_summary_total_score_text">مجموع کل امتیاز:</string>
    <string name="order_summary_total_cost_text">مجموع مبلغ:</string>
    <string name="order_summary_total_price_text">مجموع کل قیمت سبد خرید:</string>
    <string name="order_summary_total_discount_text">مجموع کل تخفیف:</string>
    <string name="order_summary_delivery_price_text">هزینه </string>
    <string name="order_summary_button_text">ادامه</string>
    <string name="order_summary_buy_button_text">پرداخت</string>
    <string name="shop_cart_product_list_fragment_title">بررسی سبد خرید</string>
    <string name="shoo_cart_top_item_title">کالا در سبد خرید</string>
    <string name="shoo_cart_top_item_delete_title">حذف همه کالا ها</string>
    <string name="shop_cart_product_list_next_level_error_message">در حال به روز رسانی لیست. لطفا لحظاتی دیگر تلاش نمایید</string>
    <string name="shop_cart_product_list_next_level_empty_list_error_message">سبد خرید شما خالی است.</string>
    <string name="shop_cart_product_list_next_level_has_lack_error_message">کالایی ناموجود در سبد خرید شما وجود دارد!</string>
    <string name="shop_cart_empty_list_message">سبد خرید خالی می باشد.</string>
    <string name="shop_cart_item_count_error">موجودی این کالا از تعداد درخواستی کمتر می‌باشد.</string>
    <string name="shop_cart_product_list_next_level_has_less_count_error_message">کالایی با تعداد درخواستی بیشتر از موجودی در سبد خرید شما وجود دارد</string>
    <string name="shop_cart_address_province_dialog_title">انتخاب استان</string>
    <string name="shop_cart_address_city_dialog_title">انتخاب شهر</string>
    <string name="shop_cart_progress_bar_product_list_title">سبد خرید</string>
    <string name="shop_cart_progress_bar_address_page_title">مشخصات ارسال</string>
    <string name="shop_cart_progress_bar_payment_title">تایید و پرداخت</string>
    <string name="shop_cart_payment_method_item_pay_radio_text">پرداخت</string>
    <string name="shop_cart_payment_method_item_pay_from_dargah_radio_text">پرداخت از درگاه</string>
    <string name="shop_cart_payment_method_item_discount_text">کد تخفیف دارم:</string>
    <string name="shop_cart_payment_method_item_discount_hint">کد تخفیف</string>
    <string name="shop_cart_payment_method_item_submit_discount">ثبت</string>
    <string name="shop_cart_payment_method_item_deposit_message">سپرده شما کافی نیست !</string>
    <string name="shop_cart_payment_method_item_add_deposit_message">افزایش سپرده</string>
    <string name="shop_cart_payment_coupon_code_error">کد تخفیف وارد شده معتبر نمی باشد</string>
    <string name="shop_cart_payment_coupon_error_persian_letter">کد را انگلیسی وارد کنید</string>
    <string name="shop_cart_payment_coupon_code_success">کد تخفیف  با موفقیت ثبت شد</string>
    <string name="add_address_view_add_button_text">افزودن آدرس</string>
    <string name="address_detail_view_receiver_name_text">نام تحویل گیرنده</string>
    <string name="address_detail_view_receiver_mobile_text">موبایل</string>
    <string name="address_detail_view_receiver_phone_text">شماره ثابت</string>
    <string name="address_detail_view_receiver_post_code_text">کدپستی</string>
    <string name="address_detail_view_receiver_address_text">آدرس</string>
    <string name="address_detail_view_receiver_state_text">استان</string>
    <string name="address_detail_view_receiver_city_text">شهر</string>
    <string name="address_detail_view_delivery_type_text">روش ارسال</string>
    <string name="default_address_name">نشانی اول</string>
    <string name="address_detail_title_text">مشخصات تحویل گیرنده</string>
    <string name="shop_cart_address_fragment_title">درج مشخصات ارسال سفارش</string>
    <string name="delivery_detail_title_text">نحوه ارسال سفارش</string>
    <string name="select_address_button_text">تغییر آدرس</string>
    <string name="description_box_hint">توضیحات خود را وارد نمایید</string>
    <string name="addressdialog_toolbar_title">افزودن نشانی جدید </string>
    <string name="addressdialog_toolbar_title2">ویرایش نشانی </string>
    <string name="addressdialog_addressname_title">عنوان آدرس :</string>
    <string name="addressdialog_addressname_empty_error">عنوان آدرس  را وارد نمایید</string>
    <string name="addressdialog_receivername_title">نام تحویل‌گیرنده :</string>
    <string name="addressdialog_receivername_empty_error">نام تحویل گیرنده را وارد نمایید</string>
    <string name="addressdialog_fixname_title">شماره ثابت :</string>
    <string name="follow_order_list_header_detail_title"> جزییات </string>
    <string name="follow_order_list_header_amount_title"> مبلغ سفارش  </string>
    <string name="follow_order_list_header_status_title"> وضعیت سفارش  </string>
    <string name="follow_order_list_header_id_title"> شماره سفارش </string>
</resources>